alignment correction

--- a/artforum/src/css/home.css
+++ b/artforum/src/css/home.css
@@ -1,6 +1,6 @@
 
 .app {
-  padding: 20px;
+  padding-top: 20px;
 }
 
 .gallery {
